--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link rel="manifest" href="manifest0dac.json?v=1701188725455">
 	<meta name="msapplication-TileColor" content="#FFFFFF">
 	<meta name="msapplication-config" content="browserconfig.xml">
-	<!-- <link rel="preload" href="locale/en0dac.txt?v=1701188725455" as="fetch" crossorigin="anonymous"/> -->
+	<link rel="preload" href="locale/en0dac.txt?v=1701188725455" as="fetch" crossorigin="anonymous"/>
 	<link rel="preload" href="script0dac.js?v=1701188725455" as="script"/>
 	<link rel="preload" href="media/panorama_35EC664E_3A90_2947_41A6_A072F55F7C69_0/r/2/0_00dac.jpg?v=1701188725455" as="image"/>
 	<link rel="preload" href="media/panorama_35EC664E_3A90_2947_41A6_A072F55F7C69_0/l/2/0_00dac.jpg?v=1701188725455" as="image"/>
